--- a/ComputeMe/ComputeMe/ComputeMe-Info.plist
+++ b/ComputeMe/ComputeMe/ComputeMe-Info.plist
@@ -25,7 +25,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
-	<string>InitialStoryboard</string>
+	<string>QuestionStoryboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
