--- a/ComputeMe/ComputeMe/ComputeMe-Info.plist
+++ b/ComputeMe/ComputeMe/ComputeMe-Info.plist
@@ -24,8 +24,14 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Cocogoose_trail.otf</string>
+		<string>CODE Bold.otf</string>
+		<string>CODE Light.otf</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
-	<string>InitialStoryboard</string>
+	<string>QuestionStoryboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -33,12 +39,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-	</array>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Cocogoose_trail.otf</string>
-		<string>CODE Bold.otf</string>
-		<string>CODE Light.otf</string>
 	</array>
 </dict>
 </plist>
