--- a/ComputeMe/ComputeMe/ComputeMe-Info.plist
+++ b/ComputeMe/ComputeMe/ComputeMe-Info.plist
@@ -31,7 +31,7 @@
 		<string>CODE Light.otf</string>
 	</array>
 	<key>UIMainStoryboardFile</key>
-	<string>SettingStoryboard</string>
+	<string>InitialStoryboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
