@update - change question view from table view to view controller, minor design on question view

--- a/ComputeMe/ComputeMe/ComputeMe-Info.plist
+++ b/ComputeMe/ComputeMe/ComputeMe-Info.plist
@@ -32,7 +32,7 @@
 		<string>myriadpro.otf</string>
 	</array>
 	<key>UIMainStoryboardFile</key>
-	<string>ResultStoryboard</string>
+	<string>QuestionStoryboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
