--- a/ComputeMe/ComputeMe/ComputeMe-Info.plist
+++ b/ComputeMe/ComputeMe/ComputeMe-Info.plist
@@ -32,7 +32,7 @@
 		<string>myriadpro.otf</string>
 	</array>
 	<key>UIMainStoryboardFile</key>
-	<string>QuestionStoryboard</string>
+	<string>InitialStoryboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
