--- a/ComputeMe/Supporting Files/Info.plist
+++ b/ComputeMe/Supporting Files/Info.plist
@@ -22,6 +22,17 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>COCOGOOSE.otf</string>
+		<string>CODE Bold.otf</string>
+		<string>CODE Light.otf</string>
+		<string>myriadpro.otf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+	<string>audio</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -31,8 +42,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 </dict>
 </plist>
